refactoring Daofactory per singleton